surfraw (2.1.5) unstable; urgency=low

  * Added myself to Uploaders.
  * Ack not-really-NMU (Closes: #354737).
  * Applied bash completion fixes, thanks to Justin B. Rye (Closes: #361668).
  * wikipedia: disable requoting; use Go rather than Search.
  * Fixes to ixquick elvi, thanks to Aparna Jaitly.
  * New elvi: discogs, thanks to Patroklos Argyroudis.
  * Thanks to James Rowe for the following patches:
    + Move W to /usr/lib/surfraw (see
      http://bugs.gentoo.org/show_bug.cgi?id=58955).
    + New elvi: genpkg for Gentoo package search.
    + Generate elvi list on demand and eliminate surfraw_elvi.list
    + Make elvidir configurable.
    + Make sysconfdir configurable.
    + Fix 'make dist' and 'make distcheck'.
    + Remove unused browser checks.
    + Drop AC_CANONICAL_HOST - not needed.
  * Remove config.guess and config.sub - not needed.
  * Remove config.{guess,sub} updating logic from debian/rules.
  * postrm: remove /etc/surfraw_elvi.list if it exists.
  * Convert debhelper Build-Depends-Indep: to Build-Depends:.
  * Standards-Version: 3.7.2 (No changes).
  * Updated Copyright dates to 2006.
  * Added linda override exec-not-elf-or-script for /usr/bin/surfraw
    due to erroneous file(1) output (See: #369977).
  * Tweak HACKING appendix 1 to remove need to build surfraw_elvi.list.

 -- Ian Beckwith <ianb@nessie.mcc.ac.uk>  Sun,  3 Sep 2006 01:29:05 +0100

surfraw (2.1.4) unstable; urgency=low

  * Ian Beckwith <ianb@nessie.mcc.ac.uk>:
    + changed elvi:
      - debsec: fix tabbing (Closes: #354737).
      - debbugs: updated search options.
    + new elvi:
      - ixquick (Thanks to Aparna Jaitly).
      - ctan.
      - fsfdir.
      - gutenberg.
      - wayback.
    + Makefile.include: changed sed invocation to work with
      both old and new make(1).
    + debian/rules install: removed spurious mkdir.
    + removed debian/{prerm,postinst}.
    + Switched to debhelper compat level 4.
    + HACKING: corrected appendix 1.
