@@ -50,6 +50,7 @@ elvi.1sr.gz @mandir@/man1/rae.1sr.gz
 elvi.1sr.gz @mandir@/man1/rfc.1sr.gz
 elvi.1sr.gz @mandir@/man1/rhyme.1sr.gz
 elvi.1sr.gz @mandir@/man1/scaleplus.1sr.gz
+elvi.1sr.gz @mandir@/man1/scholar.1sr.gz
 elvi.1sr.gz @mandir@/man1/scpan.1sr.gz
 elvi.1sr.gz @mandir@/man1/slashdot.1sr.gz
 elvi.1sr.gz @mandir@/man1/slinuxdoc.1sr.gz
